# IT_Asset_Manager

./: .dockerignore  Dockerfile  README.md  app.py  it_asset_manager.db  pyproject.toml  render.yaml  requirements.txt  seed.py  start.sh
.github/: dependabot.yml
.github/workflows/: deploy.yml  python-tests.yml
Static/Script/: navbar.js
Static/css/: asset_form.css  assets_list.css  categories_list.css  category_form.css  dashboard.css  form.css  list.css  login_registration.css  stylesheet.css  user_form.css  user_list.css
Templates/: asset_form.html  assets_list.html  base.html  categories_form.html  categories_list.html  category_form.html  dashboard.html  login.html  profile_form.html  register.html  user_form.html  user_list.html
asset_manager/: __init__.py  admin.py  assets.py  auth.py  extensions.py  models.py
migrations/: env.py
migrations/versions/: 6db7f7086bb7_generate_initial_schema.py  8320ca848697_initial_migration.py
static/Script/: timer.js
static/css/: assets_list.css  categories_list.css  category_form.css  form.css  list.css  login_registration.css  stylesheet.css  user_list.css
templates/: asset_form.html  assets_list.html  base.html  categories_list.html  category_form.html  dashboard.html  login.html  profile_form.html  register.html  user_form.html  user_list.html
templates/errors/: 404.html  429.html
tests/: conftest.py  test_admin.py  test_assets.py  test_auth.py  test_core.py  test_security.py
