# pyproject.toml
# This file tells Python's build tools about your project.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asset_manager"
version = "1.0.0"
description = "A Flask-based IT Asset Management application."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["asset_manager"]
